--- a/style.css
+++ b/style.css
@@ -1,11 +1,19 @@
 .container {
     display: grid;
-    grid-template: 50px 50px/ 50px 50px;
-    grid-auto-rows: 50px;
-    column-gap: 10px;
-    row-gap: 100px;
-}
-
-.container > div {
-    border: 1px solid blue;
+    grid-template-rows: 100px 100px 100px;
+    grid-template-columns: 100px 100px 100px;
+  }
+  
+  .item {
+    background-color: orange;
+    border: 1px solid black;
+    text-align: center;
+  }
+  
+  .first-row {
+  /*   background-color: pink; */
+  }
+  
+  .last-column {
+  /*   background-color: lightblue; */
   }
