--- a/style.css
+++ b/style.css
@@ -1,19 +1,18 @@
 .container {
-    display: grid;
-    grid-template-rows: 100px 100px 100px;
-    grid-template-columns: 100px 100px 100px;
-  }
-  
-  .item {
-    background-color: orange;
-    border: 1px solid black;
-    text-align: center;
-  }
-  
-  .first-row {
-  /*   background-color: pink; */
-  }
-  
-  .last-column {
-  /*   background-color: lightblue; */
-  }
+  display: inline-grid;
+  grid-template: 40px 40px 40px 40px 40px / 40px 40px 40px 40px 40px;
+  background-color: lightblue; 
+}
+
+.room {
+  border: 1px solid;
+  font-size: 50%;
+  text-align: center;
+}
+
+#living-room {
+  grid-column-start: 1;
+  grid-column-end: 6;
+/*   grid-row-start: 1;
+  grid-row-end: 3; */
+}
