--- a/style.css
+++ b/style.css
@@ -13,6 +13,34 @@
 #living-room {
   grid-column-start: 1;
   grid-column-end: 6;
-/*   grid-row-start: 1;
-  grid-row-end: 3; */
+  grid-row-start: 1;
+  grid-row-end: 3;
+}
+
+#bathroom {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 3;
+  grid-row-end: 6;
+}
+
+#bedroom {
+  grid-column-start: 2;
+  grid-column-end: 4;
+  grid-row-start: 3;
+  grid-row-end: 5;
+}
+
+#kitchen {
+  grid-column-start: 4;
+  grid-column-end: 6;
+  grid-row-start: 3;
+  grid-row-end: 6;
+}
+
+#closet {
+  grid-column-start: 2;
+  grid-column-end: 4;
+  grid-row-start: 5;
+  grid-row-end: 6;
 }
